--- a/deleteBook.html
+++ b/deleteBook.html
@@ -13,7 +13,7 @@
     </script>
   </head>
   <body>
-    <h1>Book Management App: Delete a book record</h1>
+    <h1>Book Management App: Delete a book records</h1>
     <form id="Book">
       <p>
         <label
